--- a/papers.html
+++ b/papers.html
@@ -39,9 +39,9 @@
 <td>
 <a href="https://arxiv.org/abs/2403.00928"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td>27. <b>The limit points of the bass notes of arithmetic hyperbolic surfaces</b>  
+<td>26. <b>The limit points of the bass notes of arithmetic hyperbolic surfaces</b>  
 <br>
-&nbsp
+Submitted.
 </tr>
 <tr >
 <td>
@@ -49,7 +49,7 @@
 <td>
 <a href="https://arxiv.org/abs/2308.00863"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td>26. <b>Strongly convergent unitary representations of right-angled Artin groups</b>  
+<td>25. <b>Strongly convergent unitary representations of right-angled Artin groups</b>  
  (With <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>)
 <br>
 Submitted
@@ -60,28 +60,12 @@ Submitted
 <td>
 <a href="https://arxiv.org/abs/2210.08953"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td>25. <b>Strongly convergent unitary representations of limit groups.</b>  
+<td>24. <b>Strongly convergent unitary representations of limit groups.</b>  
  (With <a href="https://www.ucl.ac.uk/~ucahllo/">Lars Louder)</a> 
  </b>
 <br>
 Submitted. Contains an appendix written with <a href="https://sites.google.com/view/will-hide/home">Will Hide</a>
 </tr>
-<tr >
-<td>
-</td>
-<td>
-<a href="https://arxiv.org/abs/2106.02555"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
-</td>
-<td>24. <b>Extension of Alon's and Friedman's conjectures to Schottky surfaces.</b>  
- (With <a href="https://sites.google.com/site/homepageoffredericnaud/">Fr&eacuted&eacuteric Naud</a>)
-<br>
-Submitted
-</td>	
-</tr>	
-
-
-
-	
 
 
 
@@ -433,10 +417,26 @@ spectral gap 3/16 - &#1013.
 </td>
 		
 </tr>
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2106.02555"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
+</td>
+<td>(ii) <b>Extension of Alon's and Friedman's conjectures to Schottky surfaces.</b>  
+ (With <a href="https://sites.google.com/site/homepageoffredericnaud/">Fr&eacuted&eacuteric Naud</a>)
+<br>
+This is superseded by upcoming paper with better proof and more general result.
+</td>	
+</tr>	
+
+
+
+	
 
 <tr>
 <td></td><td></td>
-<td>	(ii) <b>Letter to Bram Petri. </b> <a href="./diameter.pdf">Link</a>
+<td>	(iii) <b>Letter to Bram Petri. </b> <a href="./diameter.pdf">Link</a>
 <br> Concerning the relation between diameter and spectral gap on hyperbolic surfaces.
 </td>
 </tr>
