--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@ I am from Northern Ireland. </br>
 
 <div class="optw"><b>Current PhD students</b></div>
 <div class="optw">
-
 <a href="https://sites.google.com/view/ewancassidy/home">Ewan Cassidy</a> (2021-2025) Topic: <i>Representation theory and Weingarten calculus for symmetric groups</i><br>
 Anitej Banerjee (2022-2026)
 </div> 
@@ -56,8 +55,9 @@ Anitej Banerjee (2022-2026)
 <div class="optw">
 <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a> 
 <br>
-<a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a> 
+<a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a> </div>
 <br>
+   
 <div class="optw"><b>Completed PhD students</b></div>
 <div class="optw">
 <a href="https://sites.google.com/view/will-hide/home">Will Hide</a> (2020-2024) Topic: <i>Spectral theory of random cusped hyperbolic surfaces</i>
