--- a/papers.html
+++ b/papers.html
@@ -32,7 +32,16 @@
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
 
-
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2407.21506"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td>27. <b>Spectral gap for random Schottky surfaces</b>   (With <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a> and <a href="https://sites.google.com/site/homepageoffredericnaud/">Fr&eacuted&eacuteric Naud</a>)
+<br>
+Submitted.
+</tr>
 <tr >
 <td>
 </td>
