--- a/papers.html
+++ b/papers.html
@@ -32,6 +32,19 @@
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
 
+
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2409.03626"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td>28. <b>Strong asymptotic freeness of Haar unitaries in
+quasi-exponential dimensional representations</b>  
+ (With <a href="http://math.univ-lyon1.fr/homes-www/delasalle/">Mikael de la Salle</a>)
+<br>
+&nbsp
+</tr>	
 <tr >
 <td>
 </td>
@@ -98,6 +111,7 @@ Submitted. Contains an appendix written with <a href="https://sites.google.com/v
 
 <tr >
 <td>
+<a href="https://doi.org/10.5802/crmath.617"><img src="j_ico.png"title="Journal" width="100%"></a>
 </td>
 <td>
 <a href="https://arxiv.org/abs/2312.03220"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
@@ -105,7 +119,7 @@ Submitted. Contains an appendix written with <a href="https://sites.google.com/v
 <td>23. <b>\( \mathrm{SL}_4(\mathbf{Z}) \) is not purely matricial field</b>  
  (With <a href="http://math.univ-lyon1.fr/homes-www/delasalle/">Mikael de la Salle</a>)
 <br>
-<u>Comptes Rendus Mathématique</u>, to appear.
+<u>Comptes Rendus Mathématique</u>.
 </tr>	
 <tr >
 <td>
