--- a/seminar.html
+++ b/seminar.html
@@ -31,11 +31,65 @@
 </tr>
 <tr >    <th colspan="3", text-align="center"><h1>Spectra/Moduli seminar</h1></th>
 </tr>
-<tr >    <th colspan="3", text-align="center"><h3>We meet at 15:00 Monday in MCS3070</h3></th>
+<tr >    <th colspan="3", text-align="center"><h3>We meet at 14:00 Wednesday in MCS2068</h3></th>
 </tr>
 </td>	
 </tr>
 <tr >    <th colspan="3", text-align="center"><h2>2024</h2></th>
+</tr>
+
+
+<tr >
+
+
+<td>02/10/2024
+</td>
+<td>
+<a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a> 
+<td><b>Many small eigenvalues on surfaces with many cusps<b>
+</td>
+</td>	
+</tr >
+
+<tr >
+<td>
+</td>
+<td>
+</td>
+<td><div class="collapsible">
+[Abstract] 
+</div>
+<div class="optc"> On a finite-area hyperbolic surface with genus g and n cusps, the eigenvalues of the Laplacian below 1/4 play an important role in understanding the geometry of the surface and dynamics of its geodesic flow. A natural question is to understand how many of these small eigenvalues a surface can have.
+ 
+Work of Otal and Rosas proves that there can be at most 2g+n-2 small eigenvalues and simple examples can be constructed to show that this is sharp. In this talk I will discuss forthcoming work with Will Hide (Oxford) proving that if the genus is not too large compared to the number of cusps, any surface has at least const*(2g+n-2)/log(2g+n-2) small eigenvalues. I will also discuss how the log(2g+n-2) factor can be removed under some mild assumptions on the surface geometry.
+</div>
+</td>	
+</tr>
+
+
+<tr >
+
+
+<td>29/04/2024
+</td>
+<td>
+<a href="https://baptiste.louf.fr/"> Baptiste Louf</a>
+<td><b>Combinatorial maps and hyperbolic surfaces in high genus<b>
+</td>
+</td>	
+</tr >
+
+<tr >
+<td>
+</td>
+<td>
+</td>
+<td><div class="collapsible">
+[Abstract] 
+</div>
+<div class="optc">In this talk, we consider two models of random geometry of surfaces in high genus: combinatorial maps and hyperbolic surfaces. The geometric properties of random hyperbolic surfaces under the Weil–Petersson measure as the genus tends to infinity have been studied for around 15 years now, building notably on enumerative results of Mirzakhani. On the other hand, random combinatorial maps were first studied in the planar/finite genus case, and then in the high genus regime starting 10 years ago with unicellular (i.e. one-faced) maps. In a joint work with Svante Janson, we noticed some numerical coincidence regarding the counting of short, closed curves in unicellular maps/hyperbolic surfaces in high genus (comparing it to results of Mirzakhani and Petri). This leads us to conjecture some similarities between the two models in the limit, and raises several other open questions.
+</div>
+</td>	
 </tr>
 <tr >
 
