--- a/UBIQGAP.html
+++ b/UBIQGAP.html
@@ -67,14 +67,56 @@ Anitej Banerjee (Ph.D. Student)<br>
     </colgroup>
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
-<tr >    <th colspan="3", text-align="center"><u>Outputs of the program [updated Feb 2024]</u></th>
+<tr >    <th colspan="3", text-align="center"><u>Outputs of the program [updated Dec 2024]</u></th>
 </tr>
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
-
-
 <tr >
 <td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2410.06093"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
+</td>
+<td><b>Small eigenvalues of hyperbolic surfaces with many cusps.
+</b>  <a href="https://www.maths.dur.ac.uk/users/william.hide/">Will Hide</a> and <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>
+<br>Preprint
+</td>	
+</tr>	
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2409.03626"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td><b>Strong asymptotic freeness of Haar unitaries in
+quasi-exponential dimensional representations.</b>  Michael Magee and <a href="http://math.univ-lyon1.fr/homes-www/delasalle/">Mikael de la Salle</a>
+<br>
+Preprint
+</tr>	
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2407.21506"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td><b>Spectral gap for random Schottky surfaces.</b>   Irving Calder&oacuten</a>, Michael Magee, and Fr&eacuted&eacuteric Naud.
+<br>
+Preprint
+</tr>
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2403.00928"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td><b>The limit points of the bass notes of arithmetic hyperbolic surfaces.</b>  Michael Magee
+<br>
+Preprint
+</tr>
+<tr >
+<tr >
+<td>
+<a href="https://doi.org/10.5802/crmath.617"><img src="j_ico.png"title="Journal" width="100%"></a>
 </td>
 <td>
 <a href="https://arxiv.org/abs/2312.03220"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
@@ -82,7 +124,7 @@ Anitej Banerjee (Ph.D. Student)<br>
 <td><b>\( \mathrm{SL}_4(\mathbf{Z}) \) is not purely matricial field.</b>  
 Michael Magee and <a href="http://math.univ-lyon1.fr/homes-www/delasalle/">Mikael de la Salle</a>
 <br>
-<u>Comptes Rendus Mathématique</u>, to appear.
+<u>Comptes Rendus Mathématique</u>, 2024.
 </tr>	
 <tr >
 <td>
