--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
 <div class="optw"><b>About me</b></div>
 
 <div class="optw"> I'm a Professor of Mathematics at <a href="https://www.durham.ac.uk/homepage/">Durham University</a>.  <br>
-I'm interested in a broad range of problems in geometry, dynamics, spectral theory, and number theory.   <br>
+Right now, I am thinking about (in no particular order) <br>
+-unitary and permutation representations of discrete groups (strong convergence thereof)<br>
+-the representation theory of symmetric groups<br>
+-hyperbolic 2 and 3-manifolds and their spectral gaps<br>
+-a variety of topics related to the reduced C* algebras of groups.<br>
 I am from Northern Ireland. </br>
 
 
@@ -47,6 +51,7 @@ I am from Northern Ireland. </br>
 
 <div class="optw"><b>Current PhD students</b></div>
 <div class="optw">
+
 <a href="https://sites.google.com/view/ewancassidy/home">Ewan Cassidy</a> (2021-2025) Topic: <i>Representation theory and Weingarten calculus for symmetric groups</i><br>
 Anitej Banerjee (2022-2026)
 </div> 
@@ -55,9 +60,8 @@ Anitej Banerjee (2022-2026)
 <div class="optw">
 <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a> 
 <br>
-<a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a> </div>
+<a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a> 
 <br>
-   
 <div class="optw"><b>Completed PhD students</b></div>
 <div class="optw">
 <a href="https://sites.google.com/view/will-hide/home">Will Hide</a> (2020-2024) Topic: <i>Spectral theory of random cusped hyperbolic surfaces</i>
