--- a/papers.html
+++ b/papers.html
@@ -32,7 +32,16 @@
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
 
+<tr >
+<td> 
+</td>
+<td>
 
+</td>
+<td>29. <b>Strong convergence of unitary and permutation representations of discrete groups</b>  
+<br>
+A survey article, written for proceedings ECM (Sevilla). <a href="./sc_ecm_survey">[Link]</a> 
+</tr>	
 <tr >
 <td>
 </td>
@@ -76,21 +85,6 @@ Submitted.
 <br>
 Submitted
 </tr>
-<tr >
-<td>
-</td>
-<td>
-<a href="https://arxiv.org/abs/2210.08953"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
-</td>
-<td>24. <b>Strongly convergent unitary representations of limit groups.</b>  
- (With <a href="https://www.ucl.ac.uk/~ucahllo/">Lars Louder)</a> 
- </b>
-<br>
-Submitted. Contains an appendix written with <a href="https://sites.google.com/view/will-hide/home">Will Hide</a>
-</tr>
-
-
-
 
 
 	
@@ -108,6 +102,21 @@ Submitted. Contains an appendix written with <a href="https://sites.google.com/v
 </tr>
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
+<tr >
+<td>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2210.08953"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td>24. <b>Strongly convergent unitary representations of limit groups.</b>  
+ (With <a href="https://www.ucl.ac.uk/~ucahllo/">Lars Louder)</a> 
+ 
+<br>
+<u>Journal of Functional Analysis</u>, to appear.  Contains an appendix written with <a href="https://sites.google.com/view/will-hide/home">Will Hide</a>
+</tr>
+
+
+
 
 <tr >
 <td>
@@ -119,7 +128,7 @@ Submitted. Contains an appendix written with <a href="https://sites.google.com/v
 <td>23. <b>\( \mathrm{SL}_4(\mathbf{Z}) \) is not purely matricial field</b>  
  (With <a href="http://math.univ-lyon1.fr/homes-www/delasalle/">Mikael de la Salle</a>)
 <br>
-<u>Comptes Rendus Mathématique</u>.
+<u>Comptes Rendus Mathématique</u>, 2024. 
 </tr>	
 <tr >
 <td>
@@ -449,7 +458,7 @@ spectral gap 3/16 - &#1013.
 <td>(ii) <b>Extension of Alon's and Friedman's conjectures to Schottky surfaces.</b>  
  (With <a href="https://sites.google.com/site/homepageoffredericnaud/">Fr&eacuted&eacuteric Naud</a>)
 <br>
-This is superseded by upcoming paper with better proof and more general result.
+This is superseded by the paper `Spectral gap for random Schottky surfaces' which contains a more general result with a better proof.
 </td>	
 </tr>	
 
