--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Right now, I am thinking about (in no particular order) <br>
 -unitary and permutation representations of discrete groups (strong convergence thereof)<br>
 -the representation theory of symmetric groups<br>
 -hyperbolic 2 and 3-manifolds and their spectral gaps<br>
--a variety of topics related to the reduced C* algebras of groups.<br>
+-a variety of topics related to the reduced C*-algebras of groups.<br>
 I am from Northern Ireland. </br>
 
 
