--- a/papers.html
+++ b/papers.html
@@ -40,7 +40,7 @@
 </td>
 <td>29. <b>Strong convergence of unitary and permutation representations of discrete groups</b>  
 <br>
-A survey article, written for proceedings ECM (Sevilla). <a href="./sc_ecm_survey">[Link]</a> 
+A survey article, written for proceedings ECM (Sevilla). <a href="./sc_ecm_survey.pdf">[Link]</a> 
 </tr>	
 <tr >
 <td>
