--- a/seminar.html
+++ b/seminar.html
@@ -38,7 +38,32 @@
 <tr >    <th colspan="3", text-align="center"><h2>2024</h2></th>
 </tr>
 
+<tr >
 
+
+<td>02/10/2024
+</td>
+<td>
+<a href="https://sites.google.com/view/jialunli">Jialun Li</a> 
+<td><b>Selberg, Ihara and Berkovich<b>
+</td>
+</td>	
+</tr >
+
+<tr >
+<td>
+</td>
+<td>
+</td>
+<td><div class="collapsible">
+[Abstract] 
+</div>
+<div class="optc">We use the Selberg zeta function to study the limit behavior of resonances in a degenerating family of Kleinian Schottky groups. We prove that, after a suitable rescaling, the Selberg zeta functions converge to the Ihara zeta function of a limiting finite graph associated to the relevant non-Archimedean Schottky group acting on the Berkovich projective line.
+<br>
+Moreover, we show that these techniques can be used to get an exponential error term in a result of McMullen (recently extended by Dang and Mehmeti) about the asymptotics for the vanishing rate of the Hausdorff dimension of limit sets of certain degenerating Kleinian Schottky groups generating symmetric three-funnels surfaces. Here, one key idea is to introduce an intermediate zeta function capturing <i>both</i> non-Archimedean and Archimedean information (while the traditional Selberg, resp. Ihara zeta functions concern only Archimedean, resp. non-Archimedean properties). Based on ongoing joint work with Carlos Matheus, Wenyu Pan and Zhongkai Tao.
+</div>
+</td>	
+</tr>
 <tr >
 
 
