--- a/cv.html
+++ b/cv.html
@@ -31,7 +31,6 @@ Ph.D. title: <i>Quantitative spectral gap for thin groups of hyperbolic isometri
 <br>
 <div class="optw"><b>Appointments</b></div>
 <div class="optw">
-2023-2024 von Neumann Fellow, IAS Princeton<br>   
 2021- &nbsp &nbsp &nbsp &nbsp Professor, Durham University <br>
 2017-2021 Assistant Professor, Durham University <br>
 2015-2017 Gibbs Assistant Professor, Yale University <br>
@@ -42,6 +41,7 @@ Ph.D. title: <i>Quantitative spectral gap for thin groups of hyperbolic isometri
 
 <div class="optw">
 Philip Leverhulme Prize 2023<br>
+Von Neumann Fellowship IAS Princeton 2023-2024<br>
 LMS Whitehead Prize 2021 <br>
 ERC Starting grant 2020 UBIQGAP `The ubiquity of optimal spectral gaps'  1,437,000&#8364<br>
 NSF Standard grant 2017 `Thin counting in moduli spaces'  145,295&#36
