--- a/seminar.html
+++ b/seminar.html
@@ -31,10 +31,88 @@
 </tr>
 <tr >    <th colspan="3", text-align="center"><h1>Spectra/Moduli seminar</h1></th>
 </tr>
-<tr >    <th colspan="3", text-align="center"><h3>We meet at 14:00 Wednesday in MCS2068</h3></th>
+<tr >    <th colspan="3", text-align="center"><h3></h3></th>
 </tr>
 </td>	
 </tr>
+<tr >    <th colspan="3", text-align="center"><h2>2025</h2></th>
+</tr>
+
+
+
+
+<tr >
+<td>03/03/2025
+</td>
+<td>
+<a href="https://sites.google.com/view/tim-austin">Tim Austin</a> 
+<td><b>TBA<b>
+</td>
+</td>	
+</tr >
+
+<tr >
+<td>
+</td>
+<td>
+</td>
+<td><div class="collapsible">
+[Abstract] 
+</div>
+<div class="optc">
+</div>
+</td>	
+</tr>
+
+<tr >
+<td>22/01/2025
+</td>
+<td>
+<a href="https://sites.google.com/view/mikolaj-fraczyk/home">Mikołaj Frączyk</a> 
+<td><b>TBA<b>
+</td>
+</td>	
+</tr >
+
+<tr >
+<td>
+</td>
+<td>
+</td>
+<td><div class="collapsible">
+[Abstract] 
+</div>
+<div class="optc">
+</div>
+</td>	
+</tr>
+
+
+<tr >
+
+
+<td>13/01/2025
+</td>
+<td>
+<a href="https://sites.google.com/site/mostafasabrimath/">Mostafa Sabri</a> 
+<td><b>TBA<b>
+</td>
+</td>	
+</tr >
+
+<tr >
+<td>
+</td>
+<td>
+</td>
+<td><div class="collapsible">
+[Abstract] 
+</div>
+<div class="optc">
+</div>
+</td>	
+</tr>
+
 <tr >    <th colspan="3", text-align="center"><h2>2024</h2></th>
 </tr>
 
