--- a/seminar.html
+++ b/seminar.html
@@ -46,7 +46,7 @@
 </td>
 <td>
 <a href="https://sites.google.com/view/tim-austin">Tim Austin</a> 
-<td><b>TBA<b>
+<td><b>Notions of entropy in ergodic theory and representation theory<b>
 </td>
 </td>	
 </tr >
@@ -60,6 +60,33 @@
 [Abstract] 
 </div>
 <div class="optc">
+ Entropy has its origins in thermodynamics and statistical mechanics.  It gained mathematical rigour in Shannon's work on the foundations of information theory, and quickly found striking applications to ergodic theory in work of Kolmogorov and Sinai. Many variants and other applications have appeared in pure mathematics since, connecting probability, combinatorics, dynamics and other areas.
+<br><br>
+I will survey a few recent developments in this story, with an emphasis on some of the basic ideas that they have in common.  I will focus largely on (i) Lewis Bowen's "sofic entropy", which helps us to study the dynamics of "large" groups such as free groups, and (ii) a cousin of sofic entropy in the world of unitary representations, which leads to new connections with random matrices.
+</div>
+</td>	
+</tr>
+
+<tr >
+<td>26/02/2025
+</td>
+<td>
+<a href="https://www.math.univ-paris13.fr/~mingkun.liu/">Mingkun Liu</a> 
+<td><b>Component spectrum of random multi-geodesics and moduli spaces<b>
+</td>
+</td>	
+</tr >
+
+<tr >
+<td>
+</td>
+<td>
+</td>
+<td><div class="collapsible">
+[Abstract] 
+</div>
+<div class="optc">
+ A multi-geodesic is a multi-set of closed geodesics. I will explain how to pick a random multi-geodesic (on a hyperbolic surface), and discuss the following question: what is the shape of a random multi-geodesic on a hyperbolic surface of large genus? We will see that, for example, the average lengths of its first three largest components are approximately, 75.8%, 17.1%, and 4.9%, respectively, of the total length. This is a (partially ongoing) work with Vincent Delecroix.
 </div>
 </td>	
 </tr>
@@ -69,7 +96,7 @@
 </td>
 <td>
 <a href="https://sites.google.com/view/mikolaj-fraczyk/home">Mikołaj Frączyk</a> 
-<td><b>TBA<b>
+<td><b>Minimal submanifolds of locally symmetric spaces and low dimensional actions of lattices<b>
 </td>
 </td>	
 </tr >
@@ -83,6 +110,7 @@
 [Abstract] 
 </div>
 <div class="optc">
+A group G has Serre's property \( \mathrm{FA} \) if every action of G on a tree has a global fixed point. It is well known that groups with property (T) have property FA. There is a natural generalization of property FA to higher dimensional actions on simplicial complexes, called property \(\mathrm{FA}_r\), where one requires that any action on an r-dimensional CAT(0) simplicial complex has a global fixed point. Farb proved that \( \mathrm{SL}_n(\mathbb{Z}) \) enjoys property \(\mathrm{FA}_{n-2}\), but the situation remains elusive for general higher rank lattices. In a joint work with Ben Lowe, we develop a new method for establishing property \( \mathrm{FA}_r \), using minimal submanifolds and min-max theory. As a consequence we show that any cocompact lattice in \( \mathrm{SL}_n(\mathbb{R}) \) has property \(\mathrm{FA}_{[n/8]-1}\) and lattices in the exceptional rank one group \( F_4^{(-20)}\) have property \( \mathrm{FA}_2 \).
 </div>
 </td>	
 </tr>
@@ -95,7 +123,7 @@
 </td>
 <td>
 <a href="https://sites.google.com/site/mostafasabrimath/">Mostafa Sabri</a> 
-<td><b>TBA<b>
+<td><b>The curious spectra and dynamics of non-locally finite crystals<b>
 </td>
 </td>	
 </tr >
@@ -109,6 +137,9 @@
 [Abstract] 
 </div>
 <div class="optc">
+I will discuss the spectra and dynamics of \( \mathbb{Z}^d\)-periodic graphs which are not locally finite but carry non-negative, symmetric and summable edge weights. These graphs are shown to exhibit rather intriguing behaviour. We construct a periodic graph whose Laplacian has purely singularly continuous spectrum. Regarding the point spectrum, we construct a graph with a partly flat band whose eigenvectors must have infinite support. Concerning dynamical aspects, under some assumptions we prove that motion remains ballistic along at least one layer. We also construct a graph whose Laplacian has purely absolutely continuous spectrum, exhibits ballistic transport, yet fails to satisfy a dispersive estimate. This provides a negative answer to an open question in this context. The fractional Laplacian is viewed as a special case, and we prove for it a phase transition in its dynamical behaviour. Many questions still remain open, and we believe that this class of graphs can serve as a playground to better understand exotic spectra and dynamics.
+<br><br>
+Joint work with Joachim Kerner, Olaf Post and Matthias Täufer.
 </div>
 </td>	
 </tr>
