--- a/papers.html
+++ b/papers.html
@@ -52,7 +52,7 @@ A survey article, written for proceedings ECM (Sevilla). <a href="./sc_ecm_surve
 quasi-exponential dimensional representations</b>  
  (With <a href="http://math.univ-lyon1.fr/homes-www/delasalle/">Mikael de la Salle</a>)
 <br>
-&nbsp
+Submitted.
 </tr>	
 <tr >
 <td>
@@ -104,6 +104,7 @@ Submitted
 </tr>
 <tr >
 <td>
+<a href="https://doi.org/10.1016/j.jfa.2024.110803"><img src="j_ico.png"title="Journal" width="100%"></a>
 </td>
 <td>
 <a href="https://arxiv.org/abs/2210.08953"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
@@ -112,7 +113,7 @@ Submitted
  (With <a href="https://www.ucl.ac.uk/~ucahllo/">Lars Louder)</a> 
  
 <br>
-<u>Journal of Functional Analysis</u>, to appear.  Contains an appendix written with <a href="https://sites.google.com/view/will-hide/home">Will Hide</a>
+<u>Journal of Functional Analysis</u>, 2025.  Contains an appendix written with <a href="https://sites.google.com/view/will-hide/home">Will Hide</a>
 </tr>
 
 
