--- a/papers.html
+++ b/papers.html
@@ -103,13 +103,25 @@ Submitted
 <tr >    <th colspan="3", text-align="center"></th>
 </tr>
 <tr >
+<tr >
+<td>
+<a href="https://doi.org/10.4171/jems/1610"><img src="j_ico.png"title="Journal" width="100%"></a>
+</td>
+<td>
+<a href="https://arxiv.org/abs/2303.17950"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td>24. <b>Explicit spectral gap for Schottky subgroups of \( \mathrm{SL}_2(\mathbf{Z}) \)</b>  
+ (With <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a>)
+<br>
+<u>Journal of the European Mathematical Society</u>, 2025.
+</tr>
 <td>
 <a href="https://doi.org/10.1016/j.jfa.2024.110803"><img src="j_ico.png"title="Journal" width="100%"></a>
 </td>
 <td>
 <a href="https://arxiv.org/abs/2210.08953"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td>24. <b>Strongly convergent unitary representations of limit groups.</b>  
+<td>23. <b>Strongly convergent unitary representations of limit groups.</b>  
  (With <a href="https://www.ucl.ac.uk/~ucahllo/">Lars Louder)</a> 
  
 <br>
@@ -126,23 +138,11 @@ Submitted
 <td>
 <a href="https://arxiv.org/abs/2312.03220"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td>23. <b>\( \mathrm{SL}_4(\mathbf{Z}) \) is not purely matricial field</b>  
+<td>22. <b>\( \mathrm{SL}_4(\mathbf{Z}) \) is not purely matricial field</b>  
  (With <a href="http://math.univ-lyon1.fr/homes-www/delasalle/">Mikael de la Salle</a>)
 <br>
 <u>Comptes Rendus Mathématique</u>, 2024. 
 </tr>	
-<tr >
-<td>
-</td>
-<td>
-<a href="https://arxiv.org/abs/2303.17950"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
-</td>
-<td>22. <b>Explicit spectral gap for Schottky subgroups of \( \mathrm{SL}_2(\mathbf{Z}) \)</b>  
- (With <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a>)
-<br>
-<u>Journal of the European Mathematical Society</u>, to appear.
-</tr>
-
 <tr >
 <td>
 <a href="https://doi.org/10.1007/s00220-023-04801-x"><img src="j_ico.png"title="Journal" width="100%"></a>
