--- a/papers.html
+++ b/papers.html
@@ -36,11 +36,11 @@
 <td> 
 </td>
 <td>
-
+<a href="https://arxiv.org/abs/2503.21619"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
 <td>29. <b>Strong convergence of unitary and permutation representations of discrete groups</b>  
 <br>
-A survey article, written for proceedings ECM (Sevilla). <a href="./sc_ecm_survey.pdf">[Link]</a> 
+A survey article, written for proceedings ECM (Sevilla). 
 </tr>	
 <tr >
 <td>
