--- a/papers.html
+++ b/papers.html
@@ -36,9 +36,21 @@
 <td> 
 </td>
 <td>
+<a href="https://arxiv.org/abs/2504.08988"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
+</td>
+<td><b>Strong convergence of uniformly random permutation representations of surface groups</b>  
+(With <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a> and <a href="https://web.math.princeton.edu/~rvan/">Ramon van Handel</a>)
+<br>
+&nbsp
+</tr>
+
+<tr >
+<td> 
+</td>
+<td>
 <a href="https://arxiv.org/abs/2503.21619"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td>29. <b>Strong convergence of unitary and permutation representations of discrete groups</b>  
+<td><b>Strong convergence of unitary and permutation representations of discrete groups</b>  
 <br>
 A survey article, written for proceedings ECM (Sevilla). 
 </tr>	
@@ -48,7 +60,7 @@ A survey article, written for proceedings ECM (Sevilla).
 <td>
 <a href="https://arxiv.org/abs/2409.03626"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td>28. <b>Strong asymptotic freeness of Haar unitaries in
+<td><b>Strong asymptotic freeness of Haar unitaries in
 quasi-exponential dimensional representations</b>  
  (With <a href="http://math.univ-lyon1.fr/homes-www/delasalle/">Mikael de la Salle</a>)
 <br>
@@ -60,7 +72,7 @@ Submitted.
 <td>
 <a href="https://arxiv.org/abs/2407.21506"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td>27. <b>Spectral gap for random Schottky surfaces</b>   (With <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a> and <a href="https://sites.google.com/site/homepageoffredericnaud/">Fr&eacuted&eacuteric Naud</a>)
+<td><b>Spectral gap for random Schottky surfaces</b>   (With <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a> and <a href="https://sites.google.com/site/homepageoffredericnaud/">Fr&eacuted&eacuteric Naud</a>)
 <br>
 Submitted.
 </tr>
@@ -70,7 +82,7 @@ Submitted.
 <td>
 <a href="https://arxiv.org/abs/2403.00928"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td>26. <b>The limit points of the bass notes of arithmetic hyperbolic surfaces</b>  
+<td><b>The limit points of the bass notes of arithmetic hyperbolic surfaces</b>  
 <br>
 Submitted.
 </tr>
@@ -80,7 +92,7 @@ Submitted.
 <td>
 <a href="https://arxiv.org/abs/2308.00863"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td>25. <b>Strongly convergent unitary representations of right-angled Artin groups</b>  
+<td><b>Strongly convergent unitary representations of right-angled Artin groups</b>  
  (With <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a>)
 <br>
 Submitted
@@ -110,7 +122,7 @@ Submitted
 <td>
 <a href="https://arxiv.org/abs/2303.17950"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td>24. <b>Explicit spectral gap for Schottky subgroups of \( \mathrm{SL}_2(\mathbf{Z}) \)</b>  
+<td><b>Explicit spectral gap for Schottky subgroups of \( \mathrm{SL}_2(\mathbf{Z}) \)</b>  
  (With <a href="https://maths.dur.ac.uk/users/irving.d.calderon-camacho/">Irving Calder&oacuten</a>)
 <br>
 <u>Journal of the European Mathematical Society</u>, 2025.
@@ -123,7 +135,7 @@ Submitted
 <td>
 <a href="https://arxiv.org/abs/2210.08953"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td>23. <b>Strongly convergent unitary representations of limit groups.</b>  
+<td><b>Strongly convergent unitary representations of limit groups.</b>  
  (With <a href="https://www.ucl.ac.uk/~ucahllo/">Lars Louder)</a> 
  
 <br>
@@ -140,7 +152,7 @@ Submitted
 <td>
 <a href="https://arxiv.org/abs/2312.03220"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td>22. <b>\( \mathrm{SL}_4(\mathbf{Z}) \) is not purely matricial field</b>  
+<td><b>\( \mathrm{SL}_4(\mathbf{Z}) \) is not purely matricial field</b>  
  (With <a href="http://math.univ-lyon1.fr/homes-www/delasalle/">Mikael de la Salle</a>)
 <br>
 <u>Comptes Rendus Mathématique</u>, 2024. 
@@ -153,7 +165,7 @@ Submitted
 <td>
 <a href="https://arxiv.org/abs/2204.10642"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td>21. <b>Quantum Unique Ergodicity for Cayley graphs of quasirandom groups.</b>  
+<td><b>Quantum Unique Ergodicity for Cayley graphs of quasirandom groups.</b>  
  (With <a href="https://sites.google.com/view/joe-thomas/home">Joe Thomas</a> and <a href="https://yufeizhao.com/">Yufei Zhao</a>)<br>
 <u>Communications in Mathematical Physics</u>, 2023.
 </b>
@@ -167,7 +179,7 @@ Submitted
 <td>
 <a href="https://arxiv.org/abs/2101.03224"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>
-<td>20. <b>Random Unitary Representations of Surface Groups II: The large n limit.
+<td><b>Random Unitary Representations of Surface Groups II: The large n limit.
 </b> 
 <br>
 <u>Geometry and Topology</u>, to appear.
@@ -181,7 +193,7 @@ Submitted
 <td>
 <a href="https://arxiv.org/abs/2003.05892"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>
-<td>19. <b>The asymptotic statistics of random covering surfaces.
+<td><b>The asymptotic statistics of random covering surfaces.
 </b> (With <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>)
 <br>
 <u>Forum of Mathematics, Pi</u>, 2023.
@@ -197,7 +209,7 @@ Submitted
 <td>
 <a href="https://arxiv.org/abs/2107.05292"><img src="arx_ico3.png" title="arXiv" width="100%" ></a> 
 </td>
-<td>18. <b>Near optimal spectral gaps for hyperbolic surfaces.</b>  
+<td><b>Near optimal spectral gaps for hyperbolic surfaces.</b>  
  (With <a href="https://sites.google.com/view/will-hide/home">Will Hide</a>)
 </b>
 <br>
@@ -212,7 +224,7 @@ Submitted
 </td>
 <td>	<a href="https://arxiv.org/abs/1904.13106"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>								
-<td>17. <b>Matrix group integrals, surfaces, and mapping class groups II: O(n) and Sp(n).
+<td><b>Matrix group integrals, surfaces, and mapping class groups II: O(n) and Sp(n).
 </b> (With <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>)  <br>
 <u>Mathematische Annalen</u>, 2023.</td>
 
@@ -226,7 +238,7 @@ Submitted
 <td>
 <a href="https://arxiv.org/abs/2003.10911"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>
-<td>16. <b>A random cover of a compact hyperbolic surface has relative
+<td><b>A random cover of a compact hyperbolic surface has relative
 spectral gap 3/16 - &#1013.
 </b> (With <a href="https://sites.google.com/site/homepageoffredericnaud/">Fr&eacuted&eacuteric Naud</a> and 
 <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>)
@@ -241,7 +253,7 @@ spectral gap 3/16 - &#1013.
 <td>
 <a href="https://arxiv.org/abs/2108.00717"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>
-<td>15. <b>Core surfaces.
+<td><b>Core surfaces.
 </b> (With <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>)
 <br><u>Geometriae Dedicata</u>, 2022.
 </td>	
@@ -252,7 +264,7 @@ spectral gap 3/16 - &#1013.
 <td>
 <a href="https://arxiv.org/abs/2101.00252"><img src="arx_ico3.png"title="arXiv" width="100%" ></a> 
 </td>
-<td>14. <b>Random Unitary Representations of Surface Groups I: Asymptotic expansions.
+<td><b>Random Unitary Representations of Surface Groups I: Asymptotic expansions.
 </b> 
 <br>
 <u>Communications in Mathematical Physics</u>, 2022.
@@ -265,7 +277,7 @@ spectral gap 3/16 - &#1013.
 <td>
 <a href="https://arxiv.org/abs/1906.01518"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>		
-<td>13. <b>Automorphism-invariant positive definite functions on free groups.</b> (With <a href="https://www.math.kyoto-u.ac.jp/~collins/":>Beno&icirct Collins</a> and <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>)
+<td><b>Automorphism-invariant positive definite functions on free groups.</b> (With <a href="https://www.math.kyoto-u.ac.jp/~collins/":>Beno&icirct Collins</a> and <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>)
 <br>
 <u>Proceedings of the 27th International Conference in Operator Theory (OT27)</u>, 2021.
 <br>
@@ -279,7 +291,7 @@ spectral gap 3/16 - &#1013.
 <a href="https://arxiv.org/abs/1902.04873"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>			
 <td>		
-12. <b>Surface words are determined by word measures on groups. </b> (With <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>) <br>
+<b>Surface words are determined by word measures on groups. </b> (With <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>) <br>
 <u>Israel Journal of Mathematics</u>, 2021.</td>
 </tr>	
 <tr >
@@ -289,7 +301,7 @@ spectral gap 3/16 - &#1013.
 <td>		<a href="https://arxiv.org/abs/1811.00113"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>		
 <td>		
-11. <b>Kesten-McKay law for the Markoff surface mod p. </b>(With 
+<b>Kesten-McKay law for the Markoff surface mod p. </b>(With 
 <a href="https://people.epfl.ch/matthew.decourcy-ireland?lang=en">Matthew de Courcy-Ireland)</a> <br>
 <u>Annales Henri Lebesgue</u>,  2021.</td>
 	
@@ -301,7 +313,7 @@ spectral gap 3/16 - &#1013.
 <td>
 <a href="https://arxiv.org/abs/1906.00658"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>
-<td>10. <b>Explicit spectral gaps for random covers of Riemann surfaces.
+<td><b>Explicit spectral gaps for random covers of Riemann surfaces.
 </b> (With <a href="https://sites.google.com/site/homepageoffredericnaud/">Fr&eacuted&eacuteric Naud</a>)
 <br><u>Publications math&#233matiques de l'IH&#201S</u>,  2020.
 </td>	
@@ -313,7 +325,7 @@ spectral gap 3/16 - &#1013.
 <td>
 <a href="https://arxiv.org/abs/1609.05500"><img src="arx_ico3.png"title="arXiv" width="100%" ></a> 
 </td>	
-<td>09. <b>On Selberg's Eigenvalue Conjecture for moduli spaces of abelian differentials.
+<td><b>On Selberg's Eigenvalue Conjecture for moduli spaces of abelian differentials.
 </b> 
 <br><u>Compositio Mathematica</u>, 2019.	
 </td>
@@ -326,7 +338,7 @@ spectral gap 3/16 - &#1013.
 <td>		<a href="https://arxiv.org/abs/1610.07077"><img src="arx_ico3.png"title="arXiv" width="100%" ></a> 
 </td>					
 <td>		
-08. <b>The cycle structure of a Markoff automorphism over finite fields.</b>  (With Alois Cerbu, Elijah Gunther and Luke Peilen)<br>
+<b>The cycle structure of a Markoff automorphism over finite fields.</b>  (With Alois Cerbu, Elijah Gunther and Luke Peilen)<br>
 <u>Journal of Number Theory</u>, 2019.</td>
 </tr>	
 
@@ -337,7 +349,7 @@ spectral gap 3/16 - &#1013.
 <td>
 <a href="https://arxiv.org/abs/1603.06267"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>	
-<td>07. <b>An asymptotic formula for integer points on Markoff-Hurwitz varieties. 
+<td><b>An asymptotic formula for integer points on Markoff-Hurwitz varieties. 
 </b> (With <a href="https://sites.google.com/site/alexandergamburd/">Alex Gamburd</a> and Ryan Ronan)
 <br><u>Annals of Mathematics</u>, 2019.
 <a href="https://www.youtube.com/watch?v=G5s6Wg7hEKI">[One hour talk]	</a> 
@@ -352,7 +364,7 @@ spectral gap 3/16 - &#1013.
 <td>
 <a href="https://arxiv.org/abs/1809.00579"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>
-<td>06. <b>Counting saddle connections in a homology class modulo q.
+<td><b>Counting saddle connections in a homology class modulo q.
 </b> (With <a href="https://sites.google.com/site/reneruehr">Rene R&#252hr</a>) 
 <br><u> Journal of Modern Dynamics</u>, 2019. Contains an appendix  by 
 <a href="https://webusers.imj-prg.fr/~rodolfo.gutierrez/">Rodolfo Guti&#233rrez-Romo</a> 
@@ -365,7 +377,7 @@ spectral gap 3/16 - &#1013.
 <td>
 <a href="https://arxiv.org/abs/1802.04862"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>
-<td>05. <b>Matrix group integrals, surfaces, and mapping class groups I: U(n). 
+<td><b>Matrix group integrals, surfaces, and mapping class groups I: U(n). 
 </b>(With <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a>)
 <br><u>Inventiones mathematicae</u>, 2019. 
 <em>Two 45 minute talks:</em> 
@@ -384,7 +396,7 @@ spectral gap 3/16 - &#1013.
 <td>
 <a href="https://arxiv.org/abs/1705.09377"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>	
-<td>04. <b>Counting one sided simple closed geodesics on Fuchsian thrice punctured projective planes. </b>
+<td><b>Counting one sided simple closed geodesics on Fuchsian thrice punctured projective planes. </b>
 <br>
 <u>I.M.R.N.</u>, 2018.
 </td>
@@ -399,7 +411,7 @@ spectral gap 3/16 - &#1013.
 <a href="http://arxiv.org/abs/1601.03705"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>	
 <td>
-03. <b>Uniform congruence counting for Schottky semigroups in \( \mathrm{SL}_2(\mathbf{Z}) \). </b>  
+<b>Uniform congruence counting for Schottky semigroups in \( \mathrm{SL}_2(\mathbf{Z}) \). </b>  
 (With <a href="https://gauss.math.yale.edu/~ho2/">Hee Oh</a> and Dale Winter)<br>
 <u>Crelle's Journal</u>, 2017. Contains an appendix  written with Jean Bourgain and <a href="http://sites.math.rutgers.edu/~ak1230/">Alex Kontorovich</a>
 </td>
@@ -413,7 +425,7 @@ spectral gap 3/16 - &#1013.
 <td>
 <a href="http://arxiv.org/abs/1310.7977"> <img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>
-<td>02. <b>Arithmetic, zeros, and nodal domains on the sphere.</b> <br>
+<td><b>Arithmetic, zeros, and nodal domains on the sphere.</b> <br>
 <u>Communications in Mathematical Physics</u>, 2015.
 </td>
 		
@@ -426,7 +438,7 @@ spectral gap 3/16 - &#1013.
 <td>
 <a href="http://arxiv.org/abs/1112.2004"><img src="arx_ico3.png"title="arXiv" width="100%"></a> 
 </td>	
-<td>01. <b>Quantitative spectral gap for thin groups of hyperbolic isometries.</b> <br>
+<td><b>Quantitative spectral gap for thin groups of hyperbolic isometries.</b> <br>
 <u>Journal of the European Mathematical Society</u>, 2015.
 </td>
 	
