--- a/papers.html
+++ b/papers.html
@@ -41,7 +41,7 @@
 <td><b>Strong convergence of uniformly random permutation representations of surface groups</b>  
 (With <a href="https://sites.google.com/site/doronpuder/">Doron Puder</a> and <a href="https://web.math.princeton.edu/~rvan/">Ramon van Handel</a>)
 <br>
-&nbsp
+Submitted.
 </tr>
 
 <tr >
